// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;
using WebServer.Data;
using WebServer.Models;

#nullable disable

namespace WebServer.Migrations
{
    [DbContext(typeof(AppDbContext))]
    partial class AppDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.0")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("WebServer.Models.AuditEntry", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Action")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("Changes")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("EntityId")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("EntityType")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<Guid?>("PerformedByUserId")
                        .HasColumnType("uuid");

                    b.HasKey("Id");

                    b.ToTable("AuditEntries");
                });

            modelBuilder.Entity("WebServer.Models.Street", b =>
                {
                    b.Property<int>("StreetId")
                        .HasColumnType("integer");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("StreetId");

                    b.HasIndex("Name");

                    b.ToTable("Streets");
                });

            modelBuilder.Entity("WebServer.Models.Building", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("ActualUse")
                        .HasColumnType("text");

                    b.Property<int?>("ArnonaCodeShimush")
                        .HasColumnType("integer");

                    b.Property<Money?>("ArnonaDept")
                        .HasColumnType("numeric(18,2)");

                    b.Property<int?>("BldSivug")
                        .HasColumnType("integer")
                        .HasColumnName("BldSivug");

                    b.Property<int?>("BldgRightsNotUsed")
                        .HasColumnType("integer");

                    b.Property<string>("BuildRights")
                        .HasColumnType("text");

                    b.Property<string>("BuildingName")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("BldName");

                    b.Property<int?>("CanMuniFix")
                        .HasColumnType("integer");

                    b.Property<string>("Complaints")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("complaints");

                    b.Property<int?>("DamagePercentage")
                        .HasColumnType("integer");

                    b.Property<int?>("DangerousBldg")
                        .HasColumnType("integer");

                    b.Property<int?>("ElectricityConsumption")
                        .HasColumnType("integer");

                    b.Property<int?>("FiziNum")
                        .HasColumnType("integer");

                    b.Property<int?>("SugMivne")
                        .HasColumnType("integer");

                    b.Property<int?>("FldId")
                        .HasColumnType("integer")
                        .HasColumnName("FIdId");

                    b.Property<int?>("FloorNum")
                        .HasColumnType("integer");

                    b.Property<int?>("FloorSum")
                        .HasColumnType("integer");

                    b.Property<int?>("ForShimur")
                        .HasColumnType("integer");

                    b.Property<string>("FutureUse")
                        .HasColumnType("text");

                    b.Property<string>("FutureYeud")
                        .HasColumnType("text");

                    b.Property<int?>("GushM")
                        .HasColumnType("integer");

                    b.Property<int?>("GushS")
                        .HasColumnType("integer");

                    b.Property<int?>("HarigatBniya")
                        .HasColumnType("integer");

                    b.Property<int?>("HeterBniya")
                        .HasColumnType("integer");

                    b.Property<int?>("HezkaMove")
                        .HasColumnType("integer");

                    b.Property<string>("HolderDetails")
                        .HasColumnType("text");

                    b.Property<string>("HouseNumber")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("BldNum");

                    b.Property<int?>("InPilot")
                        .HasColumnType("integer");

                    b.Property<int?>("IsUnitInEmptyBuilding")
                        .HasColumnType("integer")
                        .HasColumnName("IsUnitInEmptyBldg");

                    b.Property<int?>("IsurShimushHoreg")
                        .HasColumnType("integer");

                    b.Property<int?>("KidumTichnunStatus")
                        .HasColumnType("integer");

                    b.Property<int?>("SugBaalut")
                        .HasColumnType("integer");

                    b.Property<int?>("LandQuality")
                        .HasColumnType("integer");

                    b.Property<double?>("Latitude")
                        .HasColumnType("double precision");

                    b.Property<int?>("LegalDespute")
                        .HasColumnType("integer");

                    b.Property<int?>("PtorStage")
                        .HasColumnType("integer");

                    b.Property<double?>("Longitude")
                        .HasColumnType("double precision");

                    b.Property<int?>("Maintenance")
                        .HasColumnType("integer")
                        .HasColumnName("maintenance");

                    b.Property<int?>("Itum")
                        .HasColumnType("integer");

                    b.Property<string>("MiuniPosition")
                        .HasColumnType("text");

                    b.Property<string>("MivneNum")
                        .HasColumnType("text");

                    b.Property<string>("Neighborhood")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("OwnerDetails")
                        .HasColumnType("text");

                    b.Property<string>("OwnerPosition")
                        .HasColumnType("text");

                    b.Property<int?>("OwnerUnderExec")
                        .HasColumnType("integer")
                        .HasColumnName("OwnerUnderExec");

                    b.Property<int?>("ParcelM")
                        .HasColumnType("integer");

                    b.Property<int?>("ParcelS")
                        .HasColumnType("integer");

                    b.Property<string>("ParcelSize")
                        .HasColumnType("text");

                    b.Property<string>("ParcelTat")
                        .HasColumnType("text");

                    b.Property<string>("PhotoUrls")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("PikuachAlBniya")
                        .HasColumnType("text");

                    b.Property<string>("PikuachKlali")
                        .HasColumnType("text");

                    b.Property<int?>("PropNum")
                        .HasColumnType("integer");

                    b.Property<int?>("IsPlannedEmpty")
                        .HasColumnType("integer");

                    b.Property<string>("ReasonForNonUse")
                        .HasColumnType("text");

                    b.Property<int?>("Shiabud")
                        .HasColumnType("integer");

                    b.Property<int>("ShikumStatus")
                        .HasColumnType("integer");

                    b.Property<string>("ShtachBanuySum")
                        .HasColumnType("text");

                    b.Property<int?>("StandardMark")
                        .HasColumnType("integer");

                    b.Property<string>("StatusSummary")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<DateTime?>("StatusSummaryUpdatedAt")
                        .HasColumnType("date")
                        .HasColumnName("StatusSummary_Update_Dt");

                    b.Property<int?>("StreetCode")
                        .HasColumnType("integer");

                    b.Property<int?>("StreetId")
                        .HasColumnType("integer");

                    b.Property<string>("StreetName")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("TikBinyanNum")
                        .HasColumnType("text");

                    b.Property<int?>("Tofes4")
                        .HasColumnType("integer");

                    b.Property<string>("TzavDangerBldg")
                        .HasColumnType("text");

                    b.Property<int?>("HasDangerousBldgOrder")
                        .HasColumnType("integer");

                    b.Property<string>("TzavShiputzFronts")
                        .HasColumnType("text");

                    b.Property<string>("TimeFromLastElectricityConsumption")
                        .HasColumnType("text");

                    b.Property<string>("TimeFromLastWaterConsumption")
                        .HasColumnType("text");

                    b.Property<int?>("WantToRent")
                        .HasColumnType("integer");

                    b.Property<int?>("WantToSell")
                        .HasColumnType("integer");

                    b.Property<int?>("WaterConsumption")
                        .HasColumnType("integer");

                    b.Property<int?>("WhatsInside")
                        .HasColumnType("integer");

                    b.Property<int?>("Yeud")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.HasIndex("StreetId");

                    b.ToTable("Buildings");
                });

            modelBuilder.Entity("WebServer.Models.BuildingLog", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<int>("BuildingId")
                        .HasColumnType("integer");

                    b.Property<string>("Category")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<Guid?>("CreatedByUserId")
                        .HasColumnType("uuid");

                    b.Property<bool>("IsDeleted")
                        .HasColumnType("boolean");

                    b.Property<string>("Message")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("Severity")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("Title")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<DateTimeOffset?>("UpdatedAt")
                        .HasColumnType("timestamp with time zone");

                    b.HasKey("Id");

                    b.HasIndex("BuildingId");

                    b.HasIndex("CreatedByUserId");

                    b.ToTable("BuildingLogs");
                });

            modelBuilder.Entity("WebServer.Models.ExternalSystemSnapshot", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<int>("BuildingId")
                        .HasColumnType("integer");

                    b.Property<string>("Payload")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<DateTimeOffset>("RetrievedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("SystemName")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("BuildingId");

                    b.ToTable("ExternalSystemSnapshots");
                });

            modelBuilder.Entity("WebServer.Models.Users.AppUser", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<DateTimeOffset?>("LastLoginAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("PasswordHash")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("PendingTwoFactorCode")
                        .HasColumnType("text");

                    b.Property<DateTimeOffset?>("PendingTwoFactorExpiry")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("PendingTwoFactorToken")
                        .HasColumnType("text");

                    b.Property<int>("Role")
                        .HasColumnType("integer");

                    b.Property<bool>("TwoFactorEnabled")
                        .HasColumnType("boolean");

                    b.Property<string>("TwoFactorSecret")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("Username")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("Username")
                        .IsUnique();

                    b.ToTable("Users");
                });

            modelBuilder.Entity("WebServer.Models.Building", b =>
                {
                    b.HasOne("WebServer.Models.Street", "Street")
                        .WithMany("Buildings")
                        .HasForeignKey("StreetId")
                        .OnDelete(DeleteBehavior.SetNull);

                    b.Navigation("Street");
                });

            modelBuilder.Entity("WebServer.Models.BuildingLog", b =>
                {
                    b.HasOne("WebServer.Models.Users.AppUser", "CreatedByUser")
                        .WithMany("Logs")
                        .HasForeignKey("CreatedByUserId");

                    b.Navigation("CreatedByUser");
                });

            modelBuilder.Entity("WebServer.Models.ExternalSystemSnapshot", b =>
                {
                    b.HasOne("WebServer.Models.Building", "Building")
                        .WithMany("ExternalSnapshots")
                        .HasForeignKey("BuildingId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Building");
                });

            modelBuilder.Entity("WebServer.Models.Building", b =>
                {
                    b.Navigation("ExternalSnapshots");
                });

            modelBuilder.Entity("WebServer.Models.Street", b =>
                {
                    b.Navigation("Buildings");
                });

            modelBuilder.Entity("WebServer.Models.Users.AppUser", b =>
                {
                    b.Navigation("Logs");
                });
#pragma warning restore 612, 618
        }
    }
}
