namespace WebServer.Models;

public enum BuildingStatus
{
    Unknown = 0,
    Abandoned,
    UnderInspection,
    Demolished,
    Occupied
}
