namespace WebServer.Models.Users;

public enum UserRole
{
    Viewer = 0,
    Editor = 1,
    Admin = 2
}
