@startuml
skinparam shadowing false
skinparam class {
  BackgroundColor<<Implemented>> #CFF3D2
  BorderColor<<Implemented>> #2f8f2f
  BackgroundColor<<Planned>> #FFF1B3
  BorderColor<<Planned>> #d4a017
}

class Building <<Implemented>> {
  +Id: int
  +StreetName: string
  +HouseNumber: string
  +BuildingName: string
  +BldSivug: int?
  +ShikumStatus: BuildingStatus
  +StatusSummary: string
  +UpdatedAt: DateTime?
}

class Street <<Implemented>> {
  +StreetId: int
  +Name: string
}

class BuildingLog <<Implemented>> {
  +Id: int
  +BuildingId: int
  +CreatedByUserId: Guid?
  +Title: string
  +Message: string
  +CreatedAt: DateTimeOffset
}

class ExternalSystemSnapshot <<Implemented>> {
  +Id: int
  +BuildingId: int
  +SystemName: string
  +Payload: string
  +RetrievedAt: DateTimeOffset
}

class AuditEntry <<Implemented>> {
  +Id: int
  +EntityType: string
  +EntityId: string
  +Action: string
  +Changes: string
  +PerformedByUserId: Guid?
  +CreatedAt: DateTimeOffset
}

class AppUser <<Implemented>> {
  +Id: Guid
  +Username: string
  +Email: string
  +Role: UserRole
  +TwoFactorEnabled: bool
  +CreatedAt: DateTimeOffset
}

enum UserRole <<Implemented>> {
  Viewer
  Editor
  Admin
}

enum BuildingStatus <<Implemented>> {
  Unknown
  Empty
  InRehab
  ...
}

class AppDbContext <<Implemented>> {
  +Buildings: DbSet<Building>
  +Streets: DbSet<Street>
  +Users: DbSet<AppUser>
  +BuildingLogs: DbSet<BuildingLog>
  +AuditEntries: DbSet<AuditEntry>
  +ExternalSystemSnapshots: DbSet<ExternalSystemSnapshot>
}

class BuildingImage <<Planned>> {
  +Id: int
  +BuildingId: int
  +MimeType: string
  +Data: byte[]
  +UploadedAt: DateTimeOffset
}

class BuildingCardExporter <<Planned>> {
  +GeneratePng(buildingId): byte[]
}

class ExternalSyncService <<Planned>> {
  +SyncAll(): void
}

Street "1" o-- "0..*" Building
Building "1" o-- "0..*" BuildingLog
Building "1" o-- "0..*" ExternalSystemSnapshot
Building "1" o-- "0..1" BuildingImage
AppUser "1" o-- "0..*" BuildingLog : createdBy
AppUser "1" o-- "0..*" AuditEntry : performedBy
AppDbContext --> Building
AppDbContext --> Street
AppDbContext --> AppUser
AppDbContext --> BuildingLog
AppDbContext --> AuditEntry
AppDbContext --> ExternalSystemSnapshot
BuildingCardExporter ..> Building
ExternalSyncService ..> ExternalSystemSnapshot

@enduml
